--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,7 +12,7 @@
 
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-    <a class="navbar-brand" href="#"><img src="../../static/img/logo.png" width="30" height="30"
+    <a class="navbar-brand" href="#"><img src="/img/logo.png" width="30" height="30"
                                           class="d-inline-block align-top" alt="">
         My Stories</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -57,10 +57,10 @@
         <div class="col-8">
 
             <div>
-                <img src="../../static/img/fairy.png" alt="AboutUs" style="float:left" hspace="6" vspace="6"
+                <img src="/img/fairy.png" alt="AboutUs" style="float:left" hspace="6" vspace="6"
                      width="15.99999%">
                 <h1>About us</h1>
-                <p>This is a demo page where you can read bed time stories.
+                <p>This is a demo page where you will can read bed time stories.
                     After login you will be able to search, rate and mark as favourite.
                     For extra charge you will be able to set rates and marks for your kids personally.
                     In the future you will have the opportunity to write your own story, add to cart and send to print.
@@ -69,7 +69,7 @@
             </div>
             <hr>
             <div>
-                <img src="../../static/img/contact.png" alt="Fairy" style="float:left" hspace="6" vspace="6"
+                <img src="/img/contact.png" alt="Fairy" style="float:left" hspace="6" vspace="6"
                      width="15.99999%">
                 <h2>Contact us</h2>
 
@@ -97,9 +97,11 @@
             <hr>
             <div>
                 <h2>Popular Stories</h2>
-                <img src="../../static/img/susu.png" alt="Susu" hspace="6" vspace="6" height="150px">
-                <img src="../../static/img/fairygirl.png" alt="Fairi girl" hspace="6" vspace="6" height="150px">
-                <img src="../../static/img/fairies.png" alt="Fairies" hspace="6" vspace="6" height="150px">
+                <a href="https://konyvmolykepzo.hu/reszlet/susu.pdf">
+                <img src="/img/susu.png" alt="Susu" hspace="6" vspace="6" height="150px">
+                </a>
+                <img src="/img/fairygirl.png" alt="Fairi girl" hspace="6" vspace="6" height="150px">
+                <img src="/img/fairies.png" alt="Fairies" hspace="6" vspace="6" height="150px">
 
             </div>
 
